Fixed a url error in index.html.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="refresh" content="0; url=./pages_1.1/index.v1.html">
         <script type="text/javascript">
-            window.location.href = "http://example.com"
+            window.location.href = "./pages_1.1/index.v1.html"
         </script>
         <title>Page Redirection</title>
     </head>
