Added the new Google Analytics tracking code to the pages. Changed index.html to redirect to a new path. Current version is 1.2.

--- a/pages_1.2/mathnotes.v1.html
+++ b/pages_1.2/mathnotes.v1.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		 <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-F3PQ5Z92Y6"></script>
-        <script>
-            window.dataLayer = window.dataLayer || [];
-            function gtag(){dataLayer.push(arguments);}
-            gtag('js', new Date());
-            
-            gtag('config', 'G-F3PQ5Z92Y6');
-        </script>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-NCPKS7XPGR"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
+
+			gtag('config', 'G-NCPKS7XPGR');
+		</script>
 	
 		<title> My Notes</title>
 		<meta charset = "UTF-8">
