Added notes for LPCO and SVA.

--- a/pages_1.2/mathnotes.v1.html
+++ b/pages_1.2/mathnotes.v1.html
@@ -327,6 +327,33 @@
 							<ul class = "mainpage_notes">
 								<li class = "mainpage_notes"> 
 									<p>
+										<b>Software Verification and Analysis:</b> This was my first course which intersected with formal verification.
+										The main goal of the course was to understand different theoretical tools which are needed to verify programs, which
+										included tools from Hoare Logic and Abstract Interpretation. We also played with a bounded model checking program
+										called <a href="https://www.cprover.org/cbmc/" target="_blank" class = "general_link">CBMC</a> and Microsoft Research's 
+										<a href="https://github.com/Z3Prover/z3" target="_blank" class = "general_link">Z3</a>. For this course, I have a set of main notes, 
+										and a <a href="https://github.com/codetalker7/SVA-hws" target="_blank" class = "general_link">repository</a> of two homework problem sets.
+									</p>
+									<table class = "note_links">
+										<tr>
+											<td><a href = "../math-notes/SVA/main.pdf" target="_blank" class = "general_link">Main Notes</a></td>
+										<tr>
+									</table>									
+								</li>
+								<li class = "mainpage_notes"> 
+									<p>
+										<b>Linear Programming and Combinatorial Optimization:</b> As the name suggests, in this course we studied
+										different aspects of Linear Programming, algorithms to solve LPs and their application to various problems
+										in combinatorial optimization. For this course, I maintained a set of notes. 
+									</p>
+									<table class = "note_links">
+										<tr>
+											<td><a href = "../math-notes/LPCO/main.pdf" target="_blank" class = "general_link">Main Notes</a></td>
+										<tr>
+									</table>									
+								</li>
+								<li class = "mainpage_notes"> 
+									<p>
 										<b>Online Convex Optimization:</b> This course revolved around the Online Convex Optimization (abbreviated OCO) framework. In this setting, 
 										the goal is to devise an online learning algorithm which takes in a sequence of arbitrary convex functions over a convex body and tries to 
 										predict a strategy at each time step. The goal is to minimize the so called <i>regret</i> of the algorithm over a time horizon (this word comes from 
@@ -347,8 +374,7 @@
 										<tr>
 											<td><a href = "../math-notes/OCO/hw3.pdf" target="_blank" class = "general_link">HW3</a></td>
 										<tr>
-									</table>
-																		
+									</table>									
 								</li>
 								<li class = "mainpage_notes"> 
 									<b>Foundations of ML:</b> This course was an introduction to the foundations of Statistical Learning Theory. The main ideas of PAC learning were 
